# bevy_mod_kira

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/: say.flac
examples/: drum_machine.rs  file_formats.rs  level_monitor.rs  play_dynamic_sound.rs  play_sound.rs
examples/color_utils/: mod.rs
examples/effects/: mod.rs
examples/effects/level_monitor/: builder.rs  handle.rs  mod.rs
src/: context.rs  err.rs  lib.rs  plugins.rs  sound.rs  static_sound_loader.rs  util.rs
src/plugins/: debug.rs  events.rs  mod.rs
src/plugins/events/: clocks.rs  mod.rs  playback.rs  tracks.rs
src/sound/: sound_types.rs  static_sounds.rs
