[package]
name = "bevy_mod_kira"
version = "0.2.0"
edition = "2024"
categories = ["game-engines", "multimedia::audio"]
description = "A plugin that integrates the Kira audio library for use in the Bevy game engine"
keywords = ["game", "bevy", "kira", "audio", "sound"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jakerr/bevy_mod_kira"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.98"
bevy = "0.16.0"
kira = "0.8.5"
thiserror = "2.0.12"

[dev-dependencies]
bevy_egui = "0.34.1"
egui_extras = "0.31.1"
egui_plot = "0.32.1"
ringbuf = "0.4.8"

[features]
default = ["ogg"]
ogg = ["kira/ogg"]
flac = ["kira/flac"]
mp3 = ["kira/mp3"]
wav = ["kira/wav"]
